# src/routes/index.ts
@@ -1,5 +1,6 @@
 import { Router } from 'express';
 import { AuthRoutes } from '../modules/auth/routes';
+import { LibraryRoutes } from '../modules/library/routes';
 import { PlaylistRoutes } from '../modules/playlist/routes';
 import { UserRoutes } from '../modules/user/routes';
 import { VideoRoutes } from '../modules/video/routes';
@@ -7,6 +8,7 @@ import { VideoRoutes } from '../modules/video/routes';
 const router = Router();
 
 router.use('/auth', AuthRoutes);
+router.use('/library', LibraryRoutes);
 router.use('/playlists', PlaylistRoutes);
 router.use('/users', UserRoutes);
 router.use('/videos', VideoRoutes);
